# opengs-maptool

./: .gitignore  CONTRIBUTING.md  README.md  config.py  main.py  pyproject.toml  requirements.txt  theme.qss
example_output/: province_definitions.csv  territory_definitions.csv  territory_definitions.json  territory_history.csv  territory_history.json
logic/: density_generator.py  import_module.py  province_generator.py  territory_generator.py  utils.py
opengs_maptool/: config.py  main.py
opengs_maptool/examples/output/: province_definitions.csv  province_definitions.json  territory_definitions.csv  territory_history.csv
opengs_maptool/logic/: density_generator.py  export_module.py  import_module.py  province_generator.py  territory_generator.py  utils.py
opengs_maptool/ui/: main_window.py
ui/: buttons.py  i18n.py  image_display.py  main_window.py
